# cpp-vscode-template

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  main.cpp
.devcontainer/: devcontainer.json
test/: CMakeLists.txt  SomeTest.cpp
